src/tests/error/optional.sibs
@os window =>;
@os linux => [];
@os darwin => $file_name1 = "release{$version}-darwin.zip"
@os darwin => $file_name2 = "release{$version}-darwin.zip;
@os @darwin => $file_name3 = "release{$version}-darwin.zip";
@os @darwin => $file_name4 = "release{$version}-darwin.zip" => @os @darwin;
@os darwin => @os darwin => @os darwin;